--- a/docs/book/master_middleman/source/subnavs/pxf-subnav.erb
+++ b/docs/book/master_middleman/source/subnavs/pxf-subnav.erb
@@ -47,7 +47,7 @@
           <li><a href="/pxf/WIP/upgrade_pxf_rpm.html" format="markdown">Upgrading PXF</a></li>
           <li><a href="/pxf/WIP/cfginitstart_pxf.html" format="markdown">Starting, Stopping, and Restarting PXF</a></li>
           <li><a href="/pxf/WIP/using_pxf.html" format="markdown">Granting Users Access to PXF</a></li>
-          <li><a href="/pxf/WIP/reg_jar_depend.html" format="markdown">Registering PXF JAR Dependencies</a></li>
+          <li><a href="/pxf/WIP/reg_jar_depend.html" format="markdown">Registering PXF Library Dependencies</a></li>
           <li><a href="/pxf/WIP/monitor_pxf.html" format="markdown">Monitoring PXF</a></li>
         </ul>
       </li>
