Add support for File Storage (Attached to every segment host)  (#456)
The FILE profile allows PXF reading data from Network File Systems. The
filesystem has to be mounted on every segment host where PXF is running from.
PXF will then read/write data from the mounted NFS file.

For NFS, the `pxf.fs.basePath` property must be set to a valid path. The
`pxf.fs.basePath` property represents the base path to be used for
tables accessing that server.

For example, if the `pxf.fs.basePath` property is set to `/mount/path`
and the external table definition is the following:

```sql
CREATE EXTERNAL TABLE nfs_table()
LOCATION ('pxf://path/to/data?PROFILE=nfs:avro&SERVER=nfs-server')
FORMAT 'CUSTOM' (formatter='pxfwritable_import');

Then PXF will use the :///mount/path/path/to/data URI to read AVRO
files.

In this commit, PXF also prevents relative paths to be specified in the
location of any of the hadoop-compatible file systems (S3, GS, HDFS,
NFS, etc). This is to prevent users from accessing data under relative
paths to the `basePath`. For example, assume the mount path above, a
malicious user can attempt to read data from `/etc/passwd` by creating
an external table like this:

```sql
CREATE EXTERNAL TABLE hack_etc_passwd (entry text)
LOCATION ('pxf://../../etc/passwd?PROFILE=nfs:text&SERVER=nfs')
FORMAT 'text';
```

PXF now prevents users from accessing relative paths in the path defined
in the LOCATION URI. PXF also prevents using `$` to disallow resolution
of environment variables for example:

```sql
CREATE EXTERNAL TABLE hack_home_dir (entry text)
LOCATION
('pxf://$HOME/secret-files-in-gpadmin-home?PROFILE=nfs:text&SERVER=nfs')
FORMAT 'text';
```

PXF now will throw an exception in cases where users attempt to use
relative paths or $ in the path.

LOCALFILE is deprecated in favor of FILE

--- a/server/pxf-service/src/templates/user/templates/pxf-site.xml
+++ b/server/pxf-service/src/templates/user/templates/pxf-site.xml
@@ -35,4 +35,16 @@
         </description>
     </property>
     -->
+
+    <!--
+    <property>
+        <name>pxf.fs.basePath</name>
+        <value></value>
+        <description>
+            Sets the base path when constructing a URI for read and write
+            operations. This property must be configured on servers that
+            access file profiles.
+        </description>
+    </property>
+    !-->
 </configuration>
