clarify the pxf.fs.basePath description (#467)
* clarify the pxf.fs.basePath description

* capitalize MUST

--- a/server/pxf-service/src/templates/user/templates/pxf-site.xml
+++ b/server/pxf-service/src/templates/user/templates/pxf-site.xml
@@ -41,9 +41,9 @@
         <name>pxf.fs.basePath</name>
         <value></value>
         <description>
-            Sets the base path when constructing a URI for read and write
-            operations. This property must be configured on servers that
-            access file profiles.
+            Sets the base path when constructing a file URI for read and write
+            operations. This property MUST be configured for any server that
+            accesses a file using a file:* profile.
         </description>
     </property>
     !-->
