--- a/docs/content/upgrade_pxf_rpm.html.md.erb
+++ b/docs/content/upgrade_pxf_rpm.html.md.erb
@@ -2,7 +2,7 @@
 title: Upgrading PXF
 ---
 
-If you have installed the PXF `.rpm` and have initialized, configured, and are using PXF in your current Greenplum Database 5.21.2+ or 6.x installation, you must perform some upgrade actions when you install a new version of the PXF `.rpm` .
+If you have installed the PXF `rpm` or `deb` package and have initialized, configured, and are using PXF in your current Greenplum Database 5.21.2+ or 6.x installation, you must perform some upgrade actions when you install a new version of PXF.
 
 The PXF upgrade procedure has two parts. You perform one procedure before, and one procedure after, you install a new version to upgrade PXF:
 
