--- a/docs/content/overview_pxf.html.md.erb
+++ b/docs/content/overview_pxf.html.md.erb
@@ -37,6 +37,7 @@ With PXF, you can use Greenplum and SQL to query these heterogeneous data source
 - Minio
 - Google Cloud Storage
 - SQL databases including Apache Ignite, Hive, MySQL, ORACLE, Microsoft SQL Server, DB2, and PostgreSQL (via JDBC)
+- Network file systems
 
 And these data formats:
 
