--- a/docs/content/col_project.html.md.erb
+++ b/docs/content/col_project.html.md.erb
@@ -13,6 +13,7 @@ Column projection is automatically enabled for the `pxf` external table protocol
 | External SQL database | JDBC Connector | Jdbc |
 | Hive | Hive Connector | Hive, HiveRC, HiveORC, HiveVectorizedORC |
 | Hadoop | HDFS Connector | hdfs:parquet |
+| Network File System | File Connector | file:parquet |
 | Amazon S3 | S3-Compatible Object Store Connectors | s3:parquet |
 | Amazon S3 using S3 Select | S3-Compatible Object Store Connectors | s3:parquet, s3:text |
 | Google Cloud Storage | GCS Object Store Connector | gs:parquet |
