--- a/docs/content/index.html.md.erb
+++ b/docs/content/index.html.md.erb
@@ -45,6 +45,10 @@ The Greenplum Platform Extension Framework (PXF) provides parallel, high through
 
     This topic describes how to use the PXF JDBC connector to read from and write to an external SQL database such as Postgres or MySQL.
 
+-   [Accessing Files on a Network File System with PXF](nfs_pxf.html)
+
+    This topic describes how to use PXF to access files on a network file system that is mounted on your Greenplum Database hosts.
+
 -   [Troubleshooting PXF](troubleshooting_pxf.html)
 
     This topic details the service- and database- level logging configuration procedures for PXF. It also identifies some common PXF errors and describes how to address PXF memory issues.
